syntax = "proto3";

import "proto/errors.proto";
import "proto/types.proto";

option go_package = "components/proto";

message Empty {}

message AccountDetails {
    AccountType type = 1;
    string username = 2;
    string password = 3;
}

message AuthRequest {
    string id = 1;
    AccountDetails details = 2;
}

message Credentials {
    AccountType type = 1;
    string id = 2;
    string token = 3;
}

service AccountManager {
    rpc Create(AccountDetails) returns (WithStatus);
    rpc Authenticate(AuthRequest) returns (WithStatus);
    rpc Update(UpdateRequest) returns (Status);
    rpc Delete(Credentials) returns (Status);
}

message WithStatus {
    Credentials credentials = 1;
    Status status = 2;
}

message UpdateRequest {
    Credentials credentials = 1;
    AccountDetails details = 2;
}
